--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,8 @@
 }
 
 body {
-  color: var(--foreground);
+  color: black  !important;
+  /* color: var(--foreground); */
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
