--- a/styles/warehouse/picking-app/Picking.module.scss
+++ b/styles/warehouse/picking-app/Picking.module.scss
@@ -305,3 +305,16 @@
   pointer-events: none;
   background-color: #f8f8f8;
 }
+.viewOrderLink {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+      background-color: #0056b3;
+  }
+}
