--- a/styles/warehouse/packing/ParcelOptions.module.scss
+++ b/styles/warehouse/packing/ParcelOptions.module.scss
@@ -1,64 +1,58 @@
-// .parcelOptions {
-//     display: flex;
-//     flex-direction: column;
-//     gap: 10px;
-  
-//     .parcel {
-//       padding: 10px;
-//       border-radius: 5px;
-//       text-align: center;
-//       font-weight: bold;
-//       cursor: pointer;
-//     }
-  
-//     .small {
-//       background-color: #e0f7fa;
-//     }
-  
-//     .large {
-//       background-color: #ffe0b2;
-//     }
-  
-//     .attention {
-//       background-color: #ffccbc;
-//       color: red;
-//       font-weight: bold;
-//       padding: 10px;
-//       border-radius: 5px;
-//     }
-//   }
-  
 .parcelOptions {
-    position: fixed;
-    right: 10px;
-    top: 80px; /* Push it down to clear the header */
+  flex: 1; // Adjust based on how much space you want
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  padding: 10px;
+  background-color: #b2f4d3;
+  overflow-y: auto;
+
+
+  .parcel {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    z-index: 5;
-  
-    .parcel {
-      padding: 10px;
-      border-radius: 5px;
-      text-align: center;
-      font-weight: bold;
-      cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    border-radius: 10px;
+    text-align: center;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
+    width: 100%;
+
+    img {
+      max-width: 189px;
+      height: auto;
     }
-  
-    .small {
-      background-color: #e0f7fa;
+
+    &:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     }
-  
-    .large {
-      background-color: #ffe0b2;
+
+    &.small {
+      background: #fff;
+      // margin: 0px;
+      height: 290px;
+      justify-content: center;
+
     }
-  
-    .attention {
+
+    &.large {
+      background: #fff;
+      // margin: 20px;
+      height: 290px;
+      justify-content: center;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    &.attention {
       background-color: #ffccbc;
       color: red;
-      font-weight: bold;
-      padding: 10px;
-      border-radius: 5px;
     }
   }
-  
+}
