Refactor: Update parcel option selection logic and improve UI rendering in ParcelOptions component

--- a/styles/warehouse/modals/PickingAppModal.module.scss
+++ b/styles/warehouse/modals/PickingAppModal.module.scss
@@ -11,7 +11,7 @@
     z-index: 1000;
 
     &.newOrder {
-        background-color: rgba(0, 255, 0, 0.5); // Green background for success
+        background-color: #0DCD9D; // Green background for success
     }
 
     &.noOrder {
