--- a/styles/warehouse/packing/WeightAndPrint.module.scss
+++ b/styles/warehouse/packing/WeightAndPrint.module.scss
@@ -65,7 +65,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #38b2ac;
+    // background-color: #38b2ac;
     /* teal-500 */
 }
 
