--- a/styles/warehouse/packing/PackingHeader.module.scss
+++ b/styles/warehouse/packing/PackingHeader.module.scss
@@ -1,37 +1,39 @@
-.header {
-  display: flex;
-  justify-content: space-between;
+.headerSection {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
   align-items: center;
+  gap: 1rem;
+  border-bottom: 1px solid #4a5568;
   padding: 10px;
-  background-color: #f4f4f4;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  border-bottom: 1px solid #ccc;
-
-  .orderCount {
-    font-size: 20px;
-    font-weight: bold;
-  }
-
-  .customerInfo {
-    text-align: center;
-    font-size: 14px;
-
-    span {
-      display: block;
-      font-size: 12px;
-      color: #666;
-    }
-  }
-
-  .orderDetails {
-    display: flex;
-    gap: 10px;
-
-    span {
-      font-size: 12px;
-      color: #666;
-    }
-  }
+  max-height: 80px;
 }
+
+.orderCode {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;
+  background-color: #2d3748;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  color:#FFF
+}
+
+.infoSection {
+  text-align: right;
+}
+
+.label {
+  font-size: 0.875rem;
+  /* text-sm */
+  color: #000;
+  /* gray-400 */
+}
+
+.value {
+  font-weight: bold;
+  color: #000;
+}
+
+
+
+
