--- a/styles/warehouse/packing/ParcelDetails.module.scss
+++ b/styles/warehouse/packing/ParcelDetails.module.scss
@@ -4,13 +4,12 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 20px;
     background-color: #b2f4d3;
     border-radius: 10px;
+    width: 100%;
 
     .detailItem {
         display: flex;
-        // flex-direction: column;
         align-items: center;
         background: #ffffff;
         border-radius: 8px;
