--- a/styles/warehouse/packing/ParcelDetails.module.scss
+++ b/styles/warehouse/packing/ParcelDetails.module.scss
@@ -3,7 +3,7 @@
     flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 0px;
     background-color: #b2f4d3;
     border-radius: 10px;
     width: 100%;
@@ -31,6 +31,11 @@
         .detailLabel {
             font-size: 14px;
             color: #666666;
+        }
+
+        img {
+            max-width: 80px;
+            height: auto;
         }
     }
 
