--- a/styles/warehouse/packing/ParcelOptions.module.scss
+++ b/styles/warehouse/packing/ParcelOptions.module.scss
@@ -8,12 +8,16 @@
   background-color: #b2f4d3;
   // overflow-y: auto;
 
+  .selected {
+    max-height: 90px;
+    flex-direction: row !important;
+    gap: 0px;
+    margin-bottom: 0px !important;
+  }
+
   .upperSection {
-    // display: flex;
-    // flex-wrap: wrap;
-    // gap: 15px;
-    // justify-content: center;
     width: 100%;
+    // height: 100%;`
   }
 
   .lowerSection {
@@ -37,8 +41,9 @@
     transition: transform 0.2s;
     flex: 1;
     max-width: 100%; // Adjust to fit in the layout
-    height: 130px;
+    height: 166px;
     margin-bottom: 20px;
+
     // gap: 45px;
     img {
       max-width: 80px;
@@ -70,15 +75,51 @@
       }
     }
 
-    
 
-    &.customSize {
-      background: #fff;
-    }
 
-    &.reportError {
-      background: #ffccbc;
-      color: red;
-    }
+    // &.customSize {
+    //   background: #fff;
+    // }
+
+    // &.reportError {
+    //   background: #ffccbc;
+    //   color: red;
+    // }
+
+
+
+
+  }
+}
+
+.action {
+  display: flex;
+  gap: 15px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
+  flex: 1;
+  max-width: 100%;
+  height: 100px;
+
+
+  img {
+    max-width: 30px;
+    height: auto;
+  }
+
+  &.customSize {
+    background: #fff;
+
+    padding: 15px;
+    border-radius: 10px;
+    flex-direction: row;
+
+
   }
 }
