--- a/styles/warehouse/packing/ParcelOptions.module.scss
+++ b/styles/warehouse/packing/ParcelOptions.module.scss
@@ -2,7 +2,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  // gap: 20px;
   align-items: center;
   padding: 10px;
   background-color: #b2f4d3;
