--- a/styles/warehouse/packing/WeightAndPrint.module.scss
+++ b/styles/warehouse/packing/WeightAndPrint.module.scss
@@ -3,10 +3,11 @@
     flex: 1;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    // gap: 20px;
     // padding: 20px;
     background-color: #b2f4d3;
     border-radius: 10px;
+    width: 100%;
 
     .detailItem {
         display: flex;
@@ -58,4 +59,3 @@
         // gap: 100px;
     }
 }
-
