--- a/styles/warehouse/picking-app/Picking.module.scss
+++ b/styles/warehouse/picking-app/Picking.module.scss
@@ -306,6 +306,7 @@
   pointer-events: none;
   background-color: #f8f8f8;
 }
+
 .viewOrderLink {
   display: inline-block;
   padding: 10px 20px;
@@ -316,6 +317,12 @@
   transition: background-color 0.3s ease;
 
   &:hover {
-      background-color: #0056b3;
+    background-color: #0056b3;
   }
+}
+
+.errorReason {
+  margin: 17px;
+  border: 1px solid;
+  border-radius: 18px;
 }
